tuned in the page headers, fixed line-height and added text shadow to make higher contrast for labels - now more cross-bedsheet compatible. improved styling of search box drop shadow

--- a/app/sass/meta_menu_user.sass
+++ b/app/sass/meta_menu_user.sass
@@ -172,9 +172,9 @@
           border: 1px solid #CCC
           &:focus
             color: #777
-            box-shadow:         5px 5px 10px #333
-            -moz-box-shadow:    5px 5px 10px #333
-            -webkit-box-shadow: 5px 5px 10px #333
+            box-shadow:         5px 5px 10px rgba(0,0,0,0.6)
+            -moz-box-shadow:    5px 5px 10px rgba(0,0,0,0.6)
+            -webkit-box-shadow: 5px 5px 10px rgba(0,0,0,0.6)
 
         input.search
           +absolute
