--- a/app/sass/shared.sass
+++ b/app/sass/shared.sass
@@ -133,7 +133,7 @@ abbr, acronym
     background: -moz-linear-gradient(top, rgba(0,0,0,1.0), rgba(0,0,0,1.0) 4px, rgba(0,0,0,0.0))
     background: -webkit-gradient(linear, center top, center bottom, from(rgba(0,0,0,1.0)), color-stop(.1,rgba(0,0,0,1.0)), to(rgba(0,0,0,0.0)))
     height: 54px
-    line-height: 56px
+    line-height: 50px
     margin: 0 0 20px
     padding-right: 36px
     .img
@@ -188,6 +188,8 @@ abbr, acronym
 
     h1
       color: #000
+      text-shadow: #fff 0 0 15px
+
 
 
 .dark
@@ -199,6 +201,7 @@ abbr, acronym
 
     h1
       color: #fff
+      text-shadow: #000 0 0 15px
 
 
 
